# memotica

./: .gitignore  Makefile  README.md  pyproject.toml
src/memotica/: __main__.py  cli.py  config.py  db.py  deck_tree.py  flashcards_table.py  global.tcss  help_modal.md  messages.py  modals.py  models.py  repositories.py  review_screen.py  settings.py  sm2.py  test_repositories.py  test_sm2.py  tui.py
src/memotica/commands/: export_command.py  import_command.py
src/memotica/modals/: __init__.py  add_card_modal.py  add_deck_modal.py  add_flashcard_modal.py  confirm_modal.py  deck_modal.py  delete_deck_modal.py  delete_flashcard_modal.py  edit_deck_modal.py  edit_flashcard_modal.py  flashcard_modal.py  help_modal.md  help_modal.py  message_modal.py
tests/: conftest.py  test_repositories.py  test_tui.py
