[project]
name = "memotica"
version = "0.5.4"
description = "An easy and simple space repition application for the terminal."
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "textual>=0.79.1",
  "sqlalchemy>=2.0.34",
  "click>=8.1.7",
  "pandas>=2.2.2",
  "pydantic-settings>=2.5.2",
]

[project.scripts]
memotica = "memotica.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "commitizen>=3.29.0",
  "ruff>=0.6.4",
  "textual-dev>=1.6.1",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
]
